[tool.poetry]
name = "learn_competitve_programming"
version = "0.1.0"
description = ""
authors = ["chuanhao01 <34702921+chuanhao01@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
black = "^21.12b0"
mypy = "^0.920"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
